--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "author": "Thomas Pani",
   "dependencies": {
+    "angular-barcode": "^2.0.1",
     "ng-admin": "^1.0.2"
   }
 }
